# Text_classification

./: requirements.txt
Text_classification/: .gitignore  Makefile  README.md  dagshub-setup.py  pyproject.toml  text-file.txt
Text_classification/docs/: mkdocs.yml
Text_classification/docs/docs/: index.md
Text_classification/text_classification/: __init__.py  dataset.py  features.py  plots.py
Text_classification/text_classification/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
