[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "text_classification"
version = "0.0.1"
description = "the project is all about the text classfication"
authors = [
  { name = "gautam" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["text_classification"]
include = ["pyproject.toml", "text_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["text_classification"]
force-sort-within-sections = true

